Add GpuFuse8FilterBenchmark: GPU Binary Fuse 8 compact vs full transfer
A JMH benchmark that A/B-toggles the GPU-side Binary Fuse 8 filter
(enableGpuFilter, compact output) against the legacy full-transfer path on
the same kernel and batch, to measure the throughput the on-GPU filter adds.

- New GpuFuse8FilterBenchmark (src/test/.../benchmark): @Param gpuFilter
  on/off, grid 19 default to match the README key-gen table. Uses one long
  measurement iteration (kernel compilation is one-time in OpenCLContext.init
  / @Setup, so JVM warmup does not help GPU benchmarks).
- README: companion "GPU Binary Fuse 8 filter - compact vs full transfer"
  table under Performance Benchmarks; ~1.28x at grid 19 on an RTX 3070, with
  a note that it is a JMH microbenchmark not directly comparable to the
  full-pipeline rows.
- CLAUDE.md: how to run JMH benchmarks locally (java -cp, not mvn exec:java,
  whose fork cannot find JMH ForkedMain) and the one-long-iteration rationale.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>